--- a/0x00-html_advanced/article.html
+++ b/0x00-html_advanced/article.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Homepage - Techium</title>
+    <title>Article - Techium</title>
     <meta name="description" content="Techium is a digital agency">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon-16x16.png">
@@ -16,6 +16,7 @@
     </header>
     <main>
         Main content
+        <aside>Aside</aside>
     </main>
     <footer>
         Footer
