Tasks 26 - 40, Done and dusted! Out of this world

--- a/0x00-html_advanced/28-styleguide.html
+++ b/0x00-html_advanced/28-styleguide.html
@@ -68,6 +68,16 @@
                 </dl>
             </div>
         </section>
+
+        <!-- Horizontal rule -->
+        <section>
+            <header>
+                <h2>Horizontal rule</h2>
+            </header>
+            <div>
+                <hr>
+            </div>
+        </section>
     </main>
     <footer>
 
