--- a/0x02-CSS_advanced/index.html
+++ b/0x02-CSS_advanced/index.html
@@ -3,17 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Homepage - Techium</title>
-    <meta name="description" content="Techium is a digital agency">
-    <!-- <link rel="icon" type="image/x-icon" href="./favicon.ico"> -->
+    <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='#'>
+    <link rel='stylesheet' href='styles/32-style.css'>
 </head>
 
 <body>
-
     <!-- Header -->
     <header class="header" data-section-theme="dark">
         <div class="container">
@@ -24,34 +22,45 @@
             </div>
             <nav class="navbar-menu">
                 <ul class="nav">
-                    <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
-                    <li class="nav-item"><a href="#works" class="nav-link">Works</a></li>
-                    <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#latest_news" class="nav-link">Latest news</a></li>
-                    <li class="nav-item"><a href="#testimonials" class="nav-link">Testimonials</a></li>
-                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#services" class="nav-link">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#works" class="nav-link">Works</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#about" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#latest_news" class="nav-link">Latest news</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#testimonials" class="nav-link">Testimonials</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contact" class="nav-link">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </div>
     </header>
-
     <!-- Main -->
     <main>
         <h1 class="visually-hidden">Homepage</h1>
-
         <!-- Hero section -->
         <section class="section-hero" data-section-theme="dark">
             <div class="container">
                 <div class="section-body">
                     <section class="section-inner">
-                        <h2 class="section-title">We help you build your brand!</h2>
-                        <a href="#" class="button">Get started</a>
+                        <h2 class="section-title">We help you build your brand</h2>
+                        <a href="#" class="button">Get Started</a>
                     </section>
                 </div>
             </div>
         </section>
-
         <!-- Services section -->
         <section id="services" class="section">
             <div class="container">
@@ -76,6 +85,8 @@
                                 <h3 class="card-title"><a href="#">Content Strategy</a></h3>
                             </div>
                         </li>
+                    </ul>
+                    <ul class="row">
                         <li class="col-1-3">
                             <div class="card-services">
                                 <h3 class="card-title"><a href="#">UX Design</a></h3>
@@ -95,13 +106,12 @@
                 </div>
             </div>
         </section>
-
         <!-- Works section -->
         <section id="works" class="section" data-section-theme="dark">
             <div class="container">
                 <header class="section-header">
                     <h2 class="section-title">Works</h2>
-                    <p class="section-tagline">Take a look in our portfolio</p>
+                    <p class="section-tagline">Take a look at our portfolio</p>
                 </header>
                 <div class="section-body">
                     <ul class="row">
@@ -145,7 +155,6 @@
                 </div>
             </div>
         </section>
-
         <!-- About Us section -->
         <section id="about" class="section">
             <div class="container">
@@ -161,44 +170,29 @@
                         <div class="col-1-2">
                             <h3>Who are we</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
-                                praesentium
-                                cumque
-                                accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta
-                                quibusdam
-                                atque
-                                maxime
-                                cum!</p>
+                                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus
+                                quidem iste dicta quibusdam atque maxime cum!</p>
                             <h3>Our culture</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
-                                praesentium
-                                cumque
-                                accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta
-                                quibusdam
-                                atque
-                                maxime
-                                cum!</p>
+                                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus
+                                quidem iste dicta quibusdam atque maxime cum!</p>
                             <h3>How we work</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum,
-                                praesentium
-                                cumque
-                                accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta
-                                quibusdam
-                                atque
-                                maxime
-                                cum!</p>
+                                praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus
+                                quidem iste dicta quibusdam atque maxime cum!</p>
                         </div>
                     </div>
-                    <div class="section-footer">
-                        <a href="#" class="button">Learn more about us</a>
-                    </div>
                 </div>
+                <div class="section-footer">
+                    <a href="#" class="button">Learn more about us</a>
+                </div>
+            </div>
         </section>
-
         <!-- Latest news section -->
         <section id="latest_news" class="section">
             <div class="container">
                 <header class="section-header">
-                    <h2 class="section-title">Latest news</h2>
+                    <h2 class="section-title">Latest News</h2>
                 </header>
                 <div class="section-body">
                     <ul class="row">
@@ -210,9 +204,7 @@
                                 <p class="card-category">Career</p>
                                 <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat.
-                                    Quo
-                                    tandem
-                                    modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                                    Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                                 <small>By Kelly D.</small>
                             </article>
                         </li>
@@ -224,11 +216,8 @@
                                 <p class="card-category">Digital Life</p>
                                 <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo?
-                                    Tum ille:
-                                    Ain
-                                    tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
-                                    commodius
-                                    agimus. An nisi populari fama?</p>
+                                    Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit
+                                    non vidit. Nos commodius agimus. An nisi populari fama?</p>
                                 <small>By William A.</small>
                             </article>
                         </li>
@@ -240,12 +229,9 @@
                                 <p class="card-category">Social</p>
                                 <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim
-                                    est a
-                                    Chrysippo
-                                    praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est
-                                    docilitas,
-                                    memoria;
-                                    Apparet statim, quae sint officia, quae actiones.</p>
+                                    est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris
+                                    generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.
+                                </p>
                                 <small>By Frances J.</small>
                             </article>
                         </li>
@@ -253,7 +239,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Testimonials section -->
         <section id="testimonials" class="section">
             <div class="container">
@@ -265,10 +250,10 @@
                     <ul class="row">
                         <li class="col-1-3">
                             <article class="card-testimonial">
-                                <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100px" height="100px">
+                                <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100"
+                                    class="card-avatar">
                                 <blockquote class="card-quote">
-                                    <p>I am completely blown away. Thanks to Techium, we've just
-                                        launched our 5th
+                                    <p>I am completely blown away. Thanks to Techium, we've just launched our 5th
                                         website!
                                         <cite>Yuri Y.</cite>
                                     </p>
@@ -277,7 +262,8 @@
                         </li>
                         <li class="col-1-3">
                             <article class="card-testimonial">
-                                <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100px" height="100px">
+                                <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100"
+                                    class="card-avatar">
                                 <blockquote class="card-quote">
                                     <p>Thank you so much for your help. Techium company is awesome!
                                         <cite>Dorrie S.</cite>
@@ -287,10 +273,10 @@
                         </li>
                         <li class="col-1-3">
                             <article class="card-testimonial">
-                                <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height="100px">
+                                <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100"
+                                    class="card-avatar">
                                 <blockquote class="card-quote">
-                                    <p>I love your system. Definitely worth the investment. I'd be lost without
-                                        Techium
+                                    <p>I love your system. Definitely worth the investment. I'd be lost without Techium
                                         company.
                                         <cite>Sven H.</cite>
                                     </p>
@@ -301,18 +287,16 @@
                 </div>
             </div>
         </section>
-
         <!-- Contact section -->
         <section id="contact" class="section">
             <div class="container">
                 <header class="section-header">
                     <h2 class="section-title">Contact</h2>
-                    <p class="section-tagline">We like to know new people</p>
+                    <p class="section-tagline">We'd love to hear from you!</p>
                 </header>
                 <div class="section-body">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
-                        modo? At
-                        eum nihili facit; Quae contraria sunt his, malane?</p>
+                        modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                 </div>
                 <div class="section-footer">
                     <a href="#" class="button">Get in touch</a>
@@ -320,24 +304,23 @@
             </div>
         </section>
     </main>
-
     <!-- Footer -->
     <footer class="footer" data-section-theme="dark">
         <div class="container">
             <div class="row">
                 <div class="col-1-2">
-                    <img src="images/logo-black.png" alt="Techium logo" width="160" height="40">
+                    <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
                     <address class="footer-address">
-                        69 Westlands Road<br>
-                        Nairobi, Kenya<br>
-                        00800
+                        972 Mission St<br>
+                        San Francisco, CA<br>
+                        94103
                     </address>
                 </div>
                 <div class="col-1-2">
                     <ul class="social nav">
                         <li class="social-item nav-item">
                             <a href="https://www.facebook.com/HolbertonSchool/" class="social-link">
-                                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px">
+                                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
                                     <title>
                                         Facebook icon
                                     </title>
@@ -348,7 +331,7 @@
                         </li>
                         <li class="social-item nav-item">
                             <a href="https://twitter.com/holbertonschool" class="social-link">
-                                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px">
+                                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
                                     <title>
                                         Twitter icon
                                     </title>
@@ -359,7 +342,7 @@
                         </li>
                         <li class="social-item nav-item">
                             <a href="https://www.instagram.com/holbertonschool/" class="social-link">
-                                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25px" height="25px">
+                                <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
                                     <title>
                                         Instagram icon
                                     </title>
@@ -370,24 +353,27 @@
                         </li>
                     </ul>
                 </div>
-                <hr>
-                <div class="row">
-                    <div class="col-1-2">
-                        <p class="footer-copyright">© 2024 Techium, made with ♥ by students at ALX Software Engineering
-                            Program.</p>
-                    </div>
-                    <div class="col-1-2">
-                        <ul class="footer-nav nav">
-                            <li class="footer-nav-item nav-item"><a href="#" class="footer-nav-link">Terms of Use</a>
-                            </li>
-                            <li class="footer-nav-item nav-item"><a href="#" class="footer-nav-link">Privacy Policy</a>
-                            </li>
-                            <li class="footer-nav-item nav-item"><a href="#" class="footer-nav-link">Cookie Policy</a>
-                            </li>
-                        </ul>
-                    </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-1-2">
+                    <p class="footer-copyright">© 2020 Techium, made with ♥ by students at Holberton School.</p>
+                </div>
+                <div class="col-1-2">
+                    <ul class="footer-nav nav">
+                        <li class="footer-nav-item nav-item">
+                            <a href="#" class="footer-nav-link">Terms of use</a>
+                        </li>
+                        <li class="footer-nav-item nav-item">
+                            <a href="#" class="footer-nav-link">Privacy Policy</a>
+                        </li>
+                        <li class="footer-nav-item nav-item">
+                            <a href="#" class="footer-nav-link">Cookie Policy</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
+        </div>
     </footer>
 </body>
 
