--- a/0x03-responsive_design/03-index.html
+++ b/0x03-responsive_design/03-index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='02-1-styles.css'>
+    <link rel='stylesheet' href='03-styles.css'>
 </head>
 
 <body>
@@ -184,7 +184,12 @@
                 <div class="section-body">
                     <div class="row">
                         <div class="col-1-2">
-                            <img src="images/pic-about-01.jpg" alt="" width="460" height="460">
+
+                            <img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
+pic-about-01_imt4t1_c_scale,w_380.jpg 380w,
+pic-about-01_imt4t1_c_scale,w_935.jpg 935w,
+pic-about-01_imt4t1_c_scale,w_1200.jpg 1200w" src="pic-about-01_imt4t1_c_scale,w_1200.jpg" alt="">
+
                         </div>
                         <div class="col-1-2">
                             <h3>Who are we</h3>
@@ -221,7 +226,12 @@
                         <li class="col-1-3">
                             <article class="card-blog">
                                 <div>
-                                    <img src="images/pic-article-01.jpg" alt="" width="305" height="305">
+
+                                    <img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
+pic-article-01_kfhdqu_c_scale,w_380.jpg 380w,
+pic-article-01_kfhdqu_c_scale,w_962.jpg 962w,
+pic-article-01_kfhdqu_c_scale,w_1200.jpg 1200w" src="pic-article-01_kfhdqu_c_scale,w_1200.jpg" alt="">
+
                                 </div>
                                 <p class="card-category">Career</p>
                                 <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a>
@@ -235,7 +245,12 @@
                         <li class="col-1-3">
                             <article class="card-blog">
                                 <div>
-                                    <img src="images/pic-article-02.jpg" alt="" width="305" height="305">
+
+                                    <img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
+pic-article-02_jtbjqu_c_scale,w_380.jpg 380w,
+pic-article-02_jtbjqu_c_scale,w_844.jpg 844w,
+pic-article-02_jtbjqu_c_scale,w_1200.jpg 1200w" src="pic-article-02_jtbjqu_c_scale,w_1200.jpg" alt="">
+
                                 </div>
                                 <p class="card-category">Digital Life</p>
                                 <h3><a href="#">Ut alios omittam, hunc appello, quem ille
@@ -251,7 +266,12 @@
                         <li class="col-1-3">
                             <article class="card-blog">
                                 <div>
-                                    <img src="images/pic-article-03.jpg" alt="" width="305" height="305">
+
+                                    <img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
+pic-article-03_h1lsyf_c_scale,w_380.jpg 380w,
+pic-article-03_h1lsyf_c_scale,w_878.jpg 878w,
+pic-article-03_h1lsyf_c_scale,w_1200.jpg 1200w" src="pic-article-03_h1lsyf_c_scale,w_1200.jpg" alt="">
+
                                 </div>
                                 <p class="card-category">Social</p>
                                 <h3><a href="#">Bestiarum vero nullum iudicium puto.</a>
